compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__externals__erlang_targeted_function_cant_contain_javascript_only_function.snap
---
source: compiler-core/src/type_/tests/externals.rs
expression: "@target(erlang)\npub fn erlang_only() -> Int {\n  javascript_only()\n}\n\n@external(javascript, \"one\", \"two\")\nfn javascript_only() -> Int\n    "
---
error: Unsupported target
  ┌─ /src/one/two.gleam:2:1
  │
2 │ pub fn erlang_only() -> Int {
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^

The `erlang_only` function is public but doesn't have an implementation
for the Erlang target. All public functions of a package must be able to
compile for a module to be valid.

error: Unsupported target
  ┌─ /src/one/two.gleam:3:3
  │
3 │   javascript_only()
  │   ^^^^^^^^^^^^^^^

This value is not available as it is defined using externals, and there is
no implementation for the Erlang target.

Hint: Did you mean to build for a different target?
